# inboxscan

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
src/inboxscan/: auth.py  cache.py  canceller.py  cli.py  connector.py  detector.py  menubar.py  models.py  parser.py  providers.py  reporter.py
src/inboxscan.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: conftest.py  test_auth.py  test_cache.py  test_connector.py  test_detector.py  test_models.py  test_parser.py  test_providers.py
