[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "inboxscan"
version = "0.5.0"
description = "Find every subscription hiding in your email — zero credentials stored, nothing leaves your machine."
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Sravya Vedantham" }]
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "google-auth-oauthlib>=1.0.0",
    "google-auth>=2.0.0",
]

[project.optional-dependencies]
menubar = [
    "rumps>=0.4.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "mypy>=1.0.0",
    "black>=23.0.0",
    "isort>=5.0.0",
    "flake8>=6.0.0",
]

[project.scripts]
inboxscan = "inboxscan.cli:app"
inboxscan-menubar = "inboxscan.menubar:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short"

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.isort]
profile = "black"
